Add Final Client Module